crates/toml_edit/tests/fixtures/invalid/string-bad-byte-escape.stderr
TOML parse error at line 1, column 14
  |
1 | naughty = "\xAg"
  |              ^
Invalid escape sequence
Expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
